--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ hr {
 
 
 #backgroundTest {
-    background-image: url(/assets/images/);
+    background-image: url(/myportfolio/assets/images/swirl_pattern.png);
     background-repeat: repeat;
     padding: 70px;
     height: calc(100% - 87px);
