--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
 .contentBox {
     margin: 0 auto;
     width: 960px;
-    height: 80%;
+    height: auto;
     background-color: #ffffff;
     border: #dddddd;
     border-style: solid;
@@ -272,7 +272,6 @@ ul {
     height: 150px;
     width: 200px;
 }
-
 #triviaImage {
     background-image: url(https://grobconnolly.github.io/myportfolio/assets/images/trivia.jpg);
     background-size: 100%;
